--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="contenedor-informacion" id="contenedor-informacion">
-            <div class="contenedor-btn">
+            <div class="contenedor-btn" id="contenedor-btn">
                 <button class="btn waves-effect waves-light" type="submit" name="action" id="btn-enviar">ENVIAR
                     <i class="material-icons right">send</i>
                 </button>
