Se agrego un nuevo campo a evento uno que muestra la apuesta que realizo el usuario

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <tr>
                         <th># Id</th>
                         <th>Address User</th>
+                        <th>Apuesta</th>
                         <th>Bets free</th>
                         <th>Url</th>
                         <th>Checking</th>
