se agrego documentacion al codigo

--- a/index.html
+++ b/index.html
@@ -57,16 +57,20 @@
                 <a class="btn-floating btn-large waves-effect waves-light green darken-3 tooltipped" data-position="left" data-tooltip="Enviar datos"><i class="material-icons">send</i></a>
             </div>
         </div>
+        <!-- Contenedor de Operativo 2 -->
         <div class="contenedor_tabla_operativo_2">
             <h2 class="text-center">Seccion de Operativo 2</h2>
             <h6 class="text-center">Seleccione los datos que desea visualizar:</h6>
+            <!-- Btn de Swich -->
             <div class="contenedor-swichtBtn">
                 <div class="swichtBtn__Border" id="swichtBtn">
                     <div><p id="btn_bitcoin_talks">BitCoin Talks</p></div>
                     <div><p id="btn_demo">Jackypot Demo</p></div>
                 </div>
             </div>
+            <!-- COntenedor de la tabla -->
             <div class="cont-tabla2">
+                <!-- Tabla operativo 2 -->
                 <table id="tabla_operativo_2" class="highlight centered">
                     <thead>
                         <tr>
@@ -81,19 +85,12 @@
                         
                     </tbody>
                 </table>
+                <!-- btn de envio -->
                 <div class="fixed-action-btn">
                     <a class="btn-floating btn-large waves-effect waves-light green darken-3 tooltipped" data-position="left" data-tooltip="Enviar datos"><i class="material-icons">send</i></a>
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
 
        <!--  <div class="contenedor-informacion" id="contenedor-informacion">
             <div class="contenedor-btn" id="contenedor-btn">
