se agregaron los endpoints a operativo1 ya con su funcionamiento correcto

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </tbody>
             </table>
             <div class="fixed-action-btn">
-                <a class="btn-floating btn-large waves-effect waves-light green darken-3 tooltipped" data-position="left" data-tooltip="Enviar datos"><i class="material-icons">send</i></a>
+                <a id="btnEnvioOp1" class="btn-floating btn-large waves-effect waves-light green darken-3 tooltipped" data-position="left" data-tooltip="Enviar datos"><i class="material-icons">send</i></a>
             </div>
         </div>
         <!-- Contenedor de Operativo 2 -->
